feature: [WIP] Adding support for other cartridges (#25)
